k8s/00-namespace.yaml
# Namespace voor FK webstack
apiVersion: v1
kind: Namespace
metadata:
  name: fk-webstack
