k8s/10-mongodb-deployment.yaml
# MongoDB Deployment (simpel, zonder auth voor schoolproject)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fk-mongodb
  namespace: fk-webstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fk-mongodb
  template:
    metadata:
      labels:
        app: fk-mongodb
    spec:
      containers:
        - name: fk-mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            # Tijdelijke opslag (voor demo)
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}
